src/test/deca/syntax/invalid/print/unopened_parenthesis_print_11.deca
// Description:
//    Tests a syntactically incorrect program for a print call with a missing open parenthesis
//
// Results:
//    Line 11 : Error, unexpected token. Expected a '('.
//
// History:
//    created on 17/12/2024

{
        print"Hello");
}